[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = cadctools
description = Core CADC tools 
long_description = Core tools for accessing CADC Web services
author = Adrian Damian
author_email = adrian.damian@nrc-cnrc.gc.ca
license = AGPLv3
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca
edit_on_github = False
github_project = opencadc/cadctools 
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.dev
#TODO tests_require = ['astropy'] # this will work in a future version of astropy_helpers (1.3.0)

[entry_points]
cadc-get-cert = cadctools.net.auth:get_cert_main
