[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = opencadc_cutout

[metadata]
package_name = opencadc_cutout
description = Cutout library in Python
long_description = Library written in Python to be integrated into different services.
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/
edit_on_github = False
github_project = at88mph/opencadc_cutout
install_requires = astroquery>=0.3.8 astropy>=2.0.9
dev_install_requires = pytest>=3.9.0 pytest-cov>=2.5.1 cadcdata>=1.2.3 vos>=3.0.9
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.0

[entry_points]
# opencadc_cutout = opencadc_cutout.core
