[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = 
    */tests/*
    */intTests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
testpaths = cadcdata

[tox]
package = cadcdata

[metadata]
package_name = cadcdata
description = Client for accessing data at the Canadian Astronomy Data Centre
long_description = Client for accessing data at the Canadian Astronomy Data Centre
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/data
edit_on_github = False
github_project = opencadc/caom2tools 
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 2.1.2

[options]
install_requires = 
    cadcutils>=1.4.3
    clint>=0.5.1
    python-magic>=0.4.15
    termcolor>=1.1.0

[options.extras_require]
test = 
    pytest
    pytest-cov>=2.5.1
    flake8>=3.4.1
    funcsigs==1.0.2
    mock>=2.0.0
    xml-compare>=1.0.5

[entry_points]
cadc-data = cadcdata.core:main_app
cadcput = cadcdata.storageinv:cadcput_cli
cadcget = cadcdata.storageinv:cadcget_cli
cadcremove = cadcdata.storageinv:cadcremove_cli
cadcinfo = cadcdata.storageinv:cadcinfo_cli
