[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = cadcetrans

[metadata]
package_name = cadcetrans
description = Client for transferring data Canadian Astronomy Data Centre
long_description = Client transferring data at the Canadian Astronomy Data Centre
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
edit_on_github = False
github_project = opencadc/cadctools/cadcetrans 
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
install_requires = clint>=0.5.1 cadcdata>=1.3 Pillow>=5.3.0 vos>=3.0.9
version = 0.9

[entry_points]
cadc-etrans = cadcetrans.etrans_core:main_app
