[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
testpaths = cadctap
markers =
    intTests: marks tests as integration tests (deselect with '-m "not intTests"')

[flake8]
max-line-length = 120

[metadata]
package_name = cadctap
description = Client for accessing data at the Canadian Astronomy Data Centre
long_description = Client for accessing data at the Canadian Astronomy Data Centre
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/
edit_on_github = False
github_project = opencadc/caom2tools 
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.9.10

[options]
install_requires = 
    cadcutils>=1.4.2
    clint>=0.5.1
    requests>=2.18
    requests-toolbelt>=0.8.0

[options.extras_require]
test =
    pytest
    pytest-cov>=2.5.1
    flake8>=3.4.1
    funcsigs==1.0.2
    mock>=2.0.0
    xml-compare>=1.0.5

[entry_points]
cadc-tap = cadctap.core:main_app
# Adding later qtap = cadctap.qtap:main_app
