[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = cadcutils
description = Generic CADC Python libary of utilities 
long_description = Library of utilities. It includes generic utilities for logging and command line parsing, networking utilities, etc.
author =  Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca
edit_on_github = False
github_project = opencadc/cadctools 
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 1.1.1a4
#TODO tests_require = ['astropy'] # this will work in a future version of astropy_helpers (1.3.0)

[entry_points]
cadc-get-cert = cadcutils.net.auth:get_cert_main
