[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[aliases]
test = pytest

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = cadcutils

[metadata]
package_name = cadcutils
description = Generic CADC Python libary of utilities 
long_description = Library of utilities. It includes generic utilities for logging and command line parsing, networking utilities, etc.
author =  Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca
edit_on_github = False
github_project = opencadc/cadctools 
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
install_requires =
    setuptools>=36.0
    requests>=2.8
    lxml<=4.3.0;python_version=="3.4"
    lxml>=3.7.0;python_version>="3.5"
    lxml;python_version=="2.7"
    six html2text distro pyopenssl
version = 1.1.27

[entry_points]
cadc-get-cert = cadcutils.net.auth:get_cert_main
getCert = cadcutils.old_get_cert:_main
